--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <td class="btn rakam">5</td>
             <td class="btn rakam">6</td>
             <td class="btn btnOpt">*</td>
-            <td class="btn btnCE">C</td>
+            <td class="btn btnC">C</td>
           </tr>
           <tr>
             <td class="btn rakam">1</td>
@@ -86,7 +86,7 @@
           </tr>
           <tr>
               <td class="btn rakam" colspan="2"> 0</td>
-              <td class="btn btnCE">.</td>
+              <td class="btn btnNokta">.</td>
               <td class="btn btnOpt">+</td>
             
           </tr>
